updating jvm flags for jdk11