@@ -15,4 +15,4 @@ RUN ./gradlew build --no-daemon
 RUN cp /home/gradle/src/build/libs/productservice-0.1.0.jar /app/spring-boot-application.jar \
     && rm -Rf /home/gradle/src
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
